# harris-cli

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  harris.spec  harris_entry.py  pyproject.toml
.github/workflows/: release.yml
harris/: client.py  config.py  logger.py  main.py  output.py
harris/cli/: admin.py  auth.py  context.py  inventory.py  listings.py  login.py  orders.py  pricing.py  reports.py  settlement.py
