[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harris-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "python-amazon-sp-api>=0.19.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
harris = "harris.main:app"

[tool.hatch.build.targets.wheel]
packages = ["harris"]
